app/static/css/main.css
html, body {
    background-color: #fcb095;
    height: 100%;
}

.navbar {
    height: 50px;
    border-bottom: 2px solid #26248f;
}


/* .dropdown-menu {
    background-color: grey;
}



.container-fluid, .navbar {
    background-color: #ff5e2d;
} */

.section.top {
    background: url('../img/coffee_keyboard_background.jpg') center center no-repeat;
    opacity: .9;
    /* color: white; */
    height: 90%;
    /* width: 100%; */
    display: flex;
    align-items: center;
}



.index-message {
    width: 900px;
    margin: 0 auto;
    text-align: center;
}

.index-message h1 {
    font-size: 54px;
    font-weight: bold;
    color: white;
    -webkit-text-stroke: 2px black;
}

.contact-container {
    background-color: #d324bc;
}

.section.second {
    /* height: 100%; */
    background-color: #272727;
    color: white;
    padding: 40px 0;
}

.section.second h2 {
    color: #CFD8DC;
}

#section-img-2 {
    height: 300px;
    width: 300px;
}

#the-footer {
    background: #0d6efd;
    color: white;
    position: relative;
    padding: 30px 0;
    width: 100%;
    height: 175px;
}

.footer-row {
    position: absolute;
    display: flex;
    align-items: center;
    /* background: #0dfd5d; */
    width: 100%;
    padding-right: 200px;
}

.footericon {
    font-size: 72px;
    color: gold;
    padding-left: 50px;
} 

#github-icon {
    height: 60px;
    width: 60px;
    float: right;
}

#linkedin-icon {
    background-color: #0d6efd;
    height: 60px;
    width: 60px;
    float: right;
}

